syntax = "proto3";

message GroupChatACK {
    int32 msgStatus = 1; // 0 = 已发送 1 = 已送达
    string reason = 2; // 原因
}